Version history for TryCatch perl module:

1.000003 - 2009/04/21 - 10:37
  - Makefile.PL tweaks

1.000002 - 2009/04/16 - 21:57
  - Update to more modern Parse::Method::Signatures

1.000001 - 2009/02/14 - 22:16
  - Attempt to improve installability with old CPAN toolchains

1.000000 - 2009/02/07 18:00
  - Initial release