@@ -1,5 +1,9 @@
 Version history for TryCatch perl module:
 
+  - Fix bug where catch block would get run sometimes when it shouldn't
+  - Better error reporting
+  - Make try 'less reserved' (i.e. so { try => 'foo' } works)
+
 1.000003 - 2009/04/21 - 10:37
   - Makefile.PL tweaks
 
